--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CROSSGRAD - Precise Guidance Powered by Students </title>
+  <title>CROSSGRAD - Admission Guidance to the Point. </title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     html, body {
@@ -53,9 +53,9 @@
       <button id="menuBtn" class="px-4 py-2 bg-gray-300 rounded">Menu</button>
       <nav id="mobileMenu" class="hidden absolute right-0 mt-2 bg-white shadow-md rounded p-4 space-y-2">
         <a href="#home" class="block hover:underline">Home</a>
-        <a href="#about" class="block hover:underline">About</a>
-        <a href="#services" class="block hover:underline">Services</a>
-        <a href="#contact" class="block hover:underline">Contact</a>
+        <a href="#about" class="block hover:underline">Admissions</a>
+        <a href="#services" class="block hover:underline">Top Universities</a>
+        <a href="#contact" class="block hover:underline">Join us</a>
       </nav>
     </div>
   </header>
@@ -72,14 +72,14 @@
       <section id="about" class="section flex items-center justify-center bg-green-100">
         <div class="text-center">
           <h2 class="text-4xl font-bold mb-4">Admissions - A cake walk.</h2>
-          <p class="text-lg">Discover students who have successfully gained admission to universities across the globe. Learn directly from their journeys, ask questions, and find support. It's guidance that gets you in!</p>
+          <p class="text-lg">Discover students who have successfully gained admission to universities across the globe. Learn directly from their journeys. It's guidance that gets you in!</p>
         </div>
       </section>
 
       <section id="services" class="section flex items-center justify-center bg-yellow-100">
         <div class="text-center">
-          <h2 class="text-4xl font-bold mb-4">Top Univerities and Adminission Score Calculator</h2>
-          <p class="text-lg">Get a curated list of the top universities worldwide. Share your academic and extracurricular profile and know your estimated admission score. Get a realistic sense of where you can apply and what you need to work on.</p>
+          <h2 class="text-4xl font-bold mb-4">Top Univerities and Admission Score Calculator</h2>
+          <p class="text-lg">Get a curated list of the top universities worldwide. Share your academic and extracurricular profile, and know your estimated admission score. Get a realistic sense of where you can apply and what you need to work on.</p>
         </div>
       </section>
 
